# vty-wasi

./: .gitignore  flake.nix  vty-wasi.cabal
src/Graphics/Vty/Platform/: Wasi.hs
src/Graphics/Vty/Platform/Wasi/: Input.hs  Output.hs  Pty.hs  Settings.hs
src/Graphics/Vty/Platform/Wasi/Input/: Classify.hs  Focus.hs  Loop.hs  Mouse.hs  Paste.hs  Terminfo.hs
src/Graphics/Vty/Platform/Wasi/Input/Classify/: Parse.hs  Types.hs
src/Graphics/Vty/Platform/Wasi/Input/Terminfo/: ANSIVT.hs
src/Graphics/Vty/Platform/Wasi/Output/: Color.hs  TerminfoBased.hs  XTermColor.hs
src/Graphics/Vty/Platform/Wasi/Pty/: JSFFI.hs
tests/: vty-wasi-tests.cabal
tests/programs/: VerifyOutput.hs  VerifyUsingMockInput.hs
