cabal-version:      3.0
name:               vty-wasi
version:            0.3.0.0
synopsis:           wasi backend for Vty
description:        Slightly modified version of vty-unix that can run on wasm32-wasi
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jonathan Daugherty
maintainer:         cygnus@foobox.com
category:           User Interfaces
copyright:          (c) 2023 Jonathan Daugherty
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: cbits/gwinsz.h
                    cbits/gwinsz.c
                    cbits/set_term_timing.c

source-repository head
  type: git
  location: https://github.com/ryndubei/vty-wasi.git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    includes:         cbits/gwinsz.h
    c-sources:        cbits/set_term_timing.c
                      cbits/gwinsz.c
    exposed-modules:  Data.Terminfo.Eval
                      Data.Terminfo.Parse
                      Graphics.Vty.Platform.Wasi
                      Graphics.Vty.Platform.Wasi.Input
                      Graphics.Vty.Platform.Wasi.Input.Classify
                      Graphics.Vty.Platform.Wasi.Input.Classify.Parse
                      Graphics.Vty.Platform.Wasi.Input.Classify.Types
                      Graphics.Vty.Platform.Wasi.Input.Focus
                      Graphics.Vty.Platform.Wasi.Input.Loop
                      Graphics.Vty.Platform.Wasi.Input.Mouse
                      Graphics.Vty.Platform.Wasi.Input.Paste
                      Graphics.Vty.Platform.Wasi.Input.Terminfo
                      Graphics.Vty.Platform.Wasi.Input.Terminfo.ANSIVT
                      Graphics.Vty.Platform.Wasi.Output
                      Graphics.Vty.Platform.Wasi.Output.Color
                      Graphics.Vty.Platform.Wasi.Output.TerminfoBased
                      Graphics.Vty.Platform.Wasi.Output.XTermColor
                      Graphics.Vty.Platform.Wasi.Settings
    build-depends:    base >= 4.8 && < 5,
                      blaze-builder,
                      bytestring,
                      mtl,
                      unix,
                      terminfo-hs,
                      vty >= 6.6,
                      deepseq,
                      vector,
                      parsec,
                      containers,
                      utf8-string,
                      transformers,
                      stm,
                      microlens,
                      microlens-mtl,
                      microlens-th

executable vty-unix-build-width-table
  main-is:             BuildWidthTable.hs
  hs-source-dirs:      tools
  default-language:    Haskell2010
  ghc-options:         -Wall

  if !impl(ghc >= 8.0)
    build-depends:     semigroups >= 0.16

  build-depends:       base >= 4.8 && < 5,
                       vty,
                       ansi-terminal
